--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <!--bootstrap cdn-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
-    <title>Contact CRUD App</title>
+    <title>CRUD App</title>
 </head>
 <body>
 <br>
 <div class="container" ng-controller="ContactCtrl">
-    <h1 class="text-center">Contacts CRUD App</h1>
+    <h1 class="text-center">CRUD App</h1>
     <br>
 
     <table class="table">
@@ -26,15 +26,15 @@
         <tr>
             <td><input class="form-control" ng-model="contact.name"></td>
             <td><input class="form-control" ng-model="contact.email"></td>
-            <td><input class="form-control" ng-model="contact.number"></td>
+            <td><input class="form-control" ng-model="contact.skype"></td>
             <td><button class="btn btn-primary" ng-click="addContact()">Add Contact</button></td>
             <td><button class="btn btn-info" ng-click="update()">Update</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselect()">Clear</button></td>
         </tr>
         <tr ng-repeat="contact in contactlist" class="text-center">
             <td>{{contact.name}}</td>
             <td>{{contact.email}}</td>
-            <td>{{contact.number}}</td>
-            <td><button class="btn btn-danger" ng-click="remove(contact._id)">Delete</button></td>
+            <td>{{contact.skype}}</td>
+            <td><button class="btn btn-danger" ng-click="delete(contact._id)">Delete</button></td>
             <td><button class="btn btn-warning" ng-click="edit(contact._id)">Edit</button></td>
         </tr>
         </tbody>
